Edited wiki page through web user interface.

--- a/wiki/WhySpock.wiki
+++ b/wiki/WhySpock.wiki
@@ -33,7 +33,7 @@
   # *Extensible for everyone*
     @Transaction? @!SpringBean? @!DeployApp? With Spock's interception-based extension mechanism, you can easily create your own extensions.
   # *Compatible with JUnit*
-    Run specifications in your IDE, build tool, and continuous integration server. Leverage JUnit's reporting capabilities.
+    Run specifications with your IDE, build tool, and continuous integration server. Leverage JUnit's reporting capabilities.
   # *Learns from the history*
     Spock combines the best features of proven tools like JUnit, jMock, and RSpec, and innovates on top of them. 
 
