Edited wiki page through web user interface.

--- a/wiki/Examples.wiki
+++ b/wiki/Examples.wiki
@@ -3,5 +3,6 @@
 
 All examples are self-contained and runnable as-is.
 
- * [StackSpecification]
- * [PublisherSubscriberSpecification]
+ * [StackSpecification Stack]
+ * [PublisherSubscriberSpecification PublisherSubscriber]
+ * [DataDrivenSpecificiation DataDriven]
