--- a/wiki/Examples.wiki
+++ b/wiki/Examples.wiki
@@ -5,4 +5,4 @@ All examples are self-contained and runnable as-is.
 
  * [StackSpecification Stack]
  * [PublisherSubscriberSpecification PublisherSubscriber]
- * [DataDrivenSpecificiation DataDriven]
+ * [DatabaseDrivenSpecificiation DatabaseDriven]
