Edited wiki page through web user interface.

--- a/wiki/StackSpecification.wiki
+++ b/wiki/StackSpecification.wiki
@@ -1,4 +1,4 @@
-#summary The classic Stack specification, Spock style.
+#summary The classic example, Spock style.
 
 {{{
 import org.junit.runner.RunWith
