Edited wiki page through web user interface.

--- a/wiki/WhatsNewInSpock0_2.wiki
+++ b/wiki/WhatsNewInSpock0_2.wiki
@@ -1,4 +1,4 @@
-#summary A peek at some of the novelties in Spock 0.2.
+#summary A peek at some of the upcoming novelties in Spock 0.2.
 
 == Accessing "Old" Values ==
 
