--- a/wiki/WhatsNewInSpock0_2.wiki
+++ b/wiki/WhatsNewInSpock0_2.wiki
@@ -31,10 +31,10 @@ def "name length"() {
 
 Let's have a look at Gradle's test report: TODO
 
-By default, the name of an iteration is the feature's name followed by a consecutive number. This can be changed by providing a naming pattern after `@Unroll`. A naming pattern may refer to data variables by prepending their names with `%`. Example:
+By default, the name of an iteration is the feature's name followed by a consecutive number. This can be changed by providing a naming pattern after `@Unroll`. A naming pattern may refer to data variables by prepending their names with `#`. Example:
 
 {{{
-@Unroll("%name should have length %length")
+@Unroll("#name should have length #length")
 def "name length"() {
   expect:
   name.size() == length
