--- a/trunk/spock-example/README
+++ b/trunk/spock-example/README
@@ -1,7 +1,8 @@
 Spock Framework Example Project
 ===============================
 
-This project helps you getting started with Spock (http://spockframework.org). It includes example specifications and build scripts for Ant (http://ant.apache.org), Gradle (http://www.gradle.org), and Maven (http://maven.apache.org). If you don't have any of these build tools installed, just run the Gradle build as described below. Upon first execution, Gradle will be automatically downloaded to your home folder.
+This project helps you getting started with Spock (http://spockframework.org). It includes several example specifications and build scripts for Ant (http://ant.apache.org), Gradle (http://www.gradle.org), and Maven (http://maven.apache.org).
+No matter which build you choose, it will first download the required dependencies (including Spock itself), then compile the project, and finally run all Spock specifications. The Gradle build goes one step further by removing the need to have a build tool installed. When run for the first time, it will download the Gradle distribution to your home folder, and then kick off the real build. Getting started with Spock can't get much easier than that!
 
 Prerequisites
 -------------
@@ -23,16 +24,17 @@ Type: mvn clean test
 
 Further Resources
 -----------------
-Spock homepage: http://spockframework.org
-Main documentation: http://spockframework.org/wiki/SpockBasics
-Discussion group: http://groups.google.com/group/spockframework
-Issue tracker: http://issues.spockframework.org
-Build server: http://builds.spockframework.org
-Maven repository: http://m2repo.spockframework.org (releases are also available from Maven Central)
+Spock homepage     http://spockframework.org
+Main documentation http://spockframework.org/wiki/SpockBasics
+Discussion group   http://groups.google.com/group/spockframework
+Issue tracker      http://issues.spockframework.org
+Build server       http://builds.spockframework.org
+Maven repository   http://m2repo.spockframework.org (releases are also available from Maven Central)
+Spock on Twitter   http://twitter.com/pniederw
 
 If you have any comments or questions, please direct them to the Spock discussion group. All feedback is appreciated!
 
-Enjoy!
+Happy spec'ing!
 Peter Niederwieser
 Creator, Spock Framework
 
