--- a/spock-example/README
+++ b/spock-example/README
@@ -1,7 +1,7 @@
 Spock Framework Example Project
 ===============================
 
-This project helps you getting started with Spock (http://spockframework.org). It includes several example specifications and build scripts for Ant (http://ant.apache.org), Gradle (http://www.gradle.org), and Maven (http://maven.apache.org).
+This project helps you getting started with Spock. It includes several example specifications and build scripts for Ant, Gradle, and Maven.
 No matter which build you choose, it will first download the required dependencies (including Spock itself), then compile the project, and finally run all Spock specifications. The Gradle build goes one step further by removing the need to have a build tool installed. When run for the first time, it will download the Gradle distribution to your home folder, and then kick off the real build. Getting started with Spock can't get much easier than that!
 
 Prerequisites
@@ -31,6 +31,11 @@ Issue tracker      http://issues.spockframework.org
 Build server       http://builds.spockframework.org
 Maven repository   http://m2repo.spockframework.org (releases are also available from Maven Central)
 Spock on Twitter   http://twitter.com/pniederw
+
+Ant homepage       http://ant.apache.org
+Gradle homepage    http://www.gradle.org
+Groovy homepage    http://groovy.codehaus.org
+Maven homepage     http://maven.apache.org
 
 If you have any comments or questions, please direct them to the Spock discussion group. All feedback is appreciated!
 
