updated notice and readme

--- a/README
+++ b/README
@@ -1,7 +1,11 @@
 Spock Framework README
 ======================
 
-Spock is a testing and specification framework for Java and Groovy applications. To learn more about Spock, visit http://spockframework.org.
+Spock is a developer testing and specification framework for Java and Groovy applications. To learn more about Spock,
+visit http://spockframework.org. To run your first spec right away, visit http://meet.spockframework.org.
+
+Current release versions: 0.4-groovy-1.6, 0.4-groovy-1.7 (released 2010-05-26)
+Current development versions: 0.5-groovy-1.7-SNAPSHOT, 0.5-groovy-1.8-SNAPSHOT
 
 Modules
 -------
@@ -12,6 +16,14 @@ spock-specs: Specifications for spock-core, written with Spock. Not required for
 spock-maven: Extended Maven support (optional).
 
 spock-example: Self-contained example project with Ant, Gradle, and Maven build. See spock-example/README for more information.
+
+spock-spring: Integration with the Spring TestContext Framework.
+
+spock-tapestry: Integration with the Tapestry 5 IoC container.
+
+spock-guice: Integration with Guice 2.
+
+spock-unitils: Integration with Unitils (http://www.unitils.org/).
 
 Gradle Build
 ------------
@@ -31,18 +43,21 @@ If not already present, build dependencies will be downloaded automatically.
 
 Further Resources
 -----------------
-Spock homepage     http://spockframework.org
-Main documentation http://spockframework.org/wiki/SpockBasics
-Discussion group   http://groups.google.com/group/spockframework
-Issue tracker      http://issues.spockframework.org
-Build server       http://builds.spockframework.org
-Maven repository   http://m2repo.spockframework.org (releases are also available from Maven Central)
-Spock on Twitter   http://twitter.com/pniederw
+Spock homepage        http://spockframework.org
+Spock web console     http://meet.spockframework.org
+Main documentation    http://wiki.spockframework.org/SpockBasics
+User discussion group http://forum.spockframework.org
+Dev discussion group  http://dev.forum.spockframework.org
+Issue tracker         http://issues.spockframework.org
+Build server          http://builds.spockframework.org
+Maven repository      http://m2repo.spockframework.org (releases are also available from Maven Central)
+Spock blog            http://blog.spockframework.org
+Spock on Twitter      http://twitter.com/pniederw
 
-Ant homepage       http://ant.apache.org
-Gradle homepage    http://www.gradle.org
-Groovy homepage    http://groovy.codehaus.org
-Maven homepage     http://maven.apache.org
+Ant homepage    http://ant.apache.org
+Gradle homepage http://www.gradle.org
+Groovy homepage http://groovy.codehaus.org
+Maven homepage  http://maven.apache.org
 
 If you have any comments or questions, please direct them to the Spock discussion group. All feedback is appreciated!
 
